tests/bad_programs/type_errors/funcall_incorrect_type3.nc
void fun(bool a, string b) {
}

int main() {
    fun(true, 54);
    return 0;
}
